--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "start:dev": "env-cmd -e development next dev",
-    "start:test": " env-cmd -e test next dev",
-    "start:pilot": "env-cmd -e pilot next dev",
-    "start:preprod": "env-cmd -e preprod next dev",
-    "start:prod": "env-cmd -e production next dev",
+    "start:dev": "env-cmd -e development next dev --turbo",
+    "start:test": " env-cmd -e test next dev --turbo",
+    "start:pilot": "env-cmd -e pilot next dev --turbo",
+    "start:preprod": "env-cmd -e preprod next dev --turbo",
+    "start:prod": "env-cmd -e production next dev --turbo",
     "build:dev": "env-cmd -e development next build",
     "build:test": " env-cmd -e test next build",
     "build:pilot": "env-cmd -e pilot next build",
@@ -20,14 +20,14 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.2",
-    "@gib-ui/core": "^0.0.51",
-    "@gib-ui/icons": "^0.0.6",
+    "@gib-ui/core": "0.1.78",
+    "@gib-ui/icons": "0.0.10",
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "lottie-react": "^2.4.0",
     "negotiator": "^0.6.3",
-    "next": "^14.0.4",
+    "next": "14.2.6",
     "node": "^21.2.0",
     "notistack": "^3.0.1",
     "react": "^18",
