--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gib-nextjs-starter",
-  "version": "0.2.0",
+  "name": "sphinx-nextjs-starter",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start:dev": "env-cmd -e development next dev --turbo",
@@ -20,10 +20,10 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.2",
-    "@gib-ui/core": "0.1.78",
     "@gib-ui/icons": "0.0.10",
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^2.0.1",
+    "@sphinx-ui/core": "^1.0.0",
     "axios": "^1.6.2",
     "lottie-react": "^2.4.0",
     "negotiator": "^0.6.3",
